<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>io.github.dk900912</groupId>
    <artifactId>multi-tier-cache-framework</artifactId>
    <version>1.0.0-M5</version>
    <packaging>pom</packaging>

    <name>multi-tier-cache-framework</name>
    <description>A high-performance, robust, and highly scalable multi-tier cache framework designed for Java applications.</description>
    <url>https://github.com/dk900912/multi-tier-cache-framework.git</url>

    <developers>
        <developer>
            <name>dk900912</name>
            <email>1289615518@qq.com</email>
        </developer>
    </developers>

    <scm>
        <connection>scm:git:git@github.com:dk900912/multi-tier-cache-framework.git</connection>
        <developerConnection>scm:git:git@github.com:dk900912/multi-tier-cache-framework.git</developerConnection>
        <url>git@github.com:dk900912/multi-tier-cache-framework.git</url>
    </scm>

    <licenses>
        <license>
            <name>The Apache Software License, Version 2.0</name>
            <url>http://www.apache.org/licenses/LICENSE-2.0.txt</url>
            <distribution>repo</distribution>
        </license>
    </licenses>

    <modules>
        <module>cache-api</module>
        <module>cache-core</module>
        <module>cache-codec</module>
        <module>cache-provider-l1-caffeine</module>
        <module>cache-provider-l1-guava</module>
        <module>cache-provider-l1-jdk</module>
        <module>cache-provider-l2-jedis</module>
        <module>cache-provider-l2-lettuce</module>
        <module>cache-provider-l2-redisson</module>
    </modules>

    <properties>
        <maven.compiler.source>21</maven.compiler.source>
        <maven.compiler.target>21</maven.compiler.target>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <guava.version>33.6.0-jre</guava.version>
        <caffeine.version>3.2.3</caffeine.version>
        <jedis.version>7.4.1</jedis.version>
        <lettuce.version>7.5.1.RELEASE</lettuce.version>
        <redisson.version>4.5.0</redisson.version>
        <netty.version>4.2.15.Final</netty.version>
        <jackson.version>2.20.2</jackson.version>
        <slf4j.version>2.0.16</slf4j.version>
        <junit.jupiter.version>5.12.2</junit.jupiter.version>
        <!-- plugin versions -->
        <maven-source-plugin.version>3.4.0</maven-source-plugin.version>
        <maven-javadoc-plugin.version>3.12.0</maven-javadoc-plugin.version>
        <maven-compiler-plugin.version>3.15.0</maven-compiler-plugin.version>
        <maven-surefire-plugin.version>3.5.6</maven-surefire-plugin.version>
        <maven-gpg-plugin.version>3.2.4</maven-gpg-plugin.version>
        <central-publishing-maven-plugin.version>0.10.0</central-publishing-maven-plugin.version>
    </properties>

    <dependencyManagement>
        <dependencies>
            <!-- testing -->
            <dependency>
                <groupId>org.junit.jupiter</groupId>
                <artifactId>junit-jupiter</artifactId>
                <version>${junit.jupiter.version}</version>
                <scope>test</scope>
            </dependency>
            <!-- internal modules -->
            <dependency>
                <groupId>io.github.dk900912</groupId>
                <artifactId>cache-api</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>io.github.dk900912</groupId>
                <artifactId>cache-codec</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>io.github.dk900912</groupId>
                <artifactId>cache-core</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>io.github.dk900912</groupId>
                <artifactId>cache-provider-l1-jdk</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>io.github.dk900912</groupId>
                <artifactId>cache-provider-l1-guava</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>io.github.dk900912</groupId>
                <artifactId>cache-provider-l1-caffeine</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>io.github.dk900912</groupId>
                <artifactId>cache-provider-l2-jedis</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>io.github.dk900912</groupId>
                <artifactId>cache-provider-l2-lettuce</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>io.github.dk900912</groupId>
                <artifactId>cache-provider-l2-redisson</artifactId>
                <version>${project.version}</version>
            </dependency>

            <!-- L1 -->
            <dependency>
                <groupId>com.google.guava</groupId>
                <artifactId>guava</artifactId>
                <version>${guava.version}</version>
            </dependency>
            <dependency>
                <groupId>com.github.ben-manes.caffeine</groupId>
                <artifactId>caffeine</artifactId>
                <version>${caffeine.version}</version>
            </dependency>

            <!-- L2 -->
            <dependency>
                <groupId>redis.clients</groupId>
                <artifactId>jedis</artifactId>
                <version>${jedis.version}</version>
            </dependency>
            <dependency>
                <groupId>io.lettuce</groupId>
                <artifactId>lettuce-core</artifactId>
                <version>${lettuce.version}</version>
            </dependency>
            <dependency>
                <groupId>org.redisson</groupId>
                <artifactId>redisson</artifactId>
                <version>${redisson.version}</version>
            </dependency>
            <dependency>
                <groupId>io.netty</groupId>
                <artifactId>netty-bom</artifactId>
                <version>${netty.version}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>

            <!-- codec -->
            <dependency>
                <groupId>com.fasterxml.jackson.core</groupId>
                <artifactId>jackson-databind</artifactId>
                <version>${jackson.version}</version>
            </dependency>
            <dependency>
                <groupId>com.fasterxml.jackson.module</groupId>
                <artifactId>jackson-module-blackbird</artifactId>
                <version>${jackson.version}</version>
            </dependency>

            <!-- logging -->
            <dependency>
                <groupId>org.slf4j</groupId>
                <artifactId>slf4j-api</artifactId>
                <version>${slf4j.version}</version>
            </dependency>
        </dependencies>
    </dependencyManagement>

    <dependencies>
        <!-- Every module needs slf4j -->
        <dependency>
            <groupId>org.slf4j</groupId>
            <artifactId>slf4j-api</artifactId>
        </dependency>
    </dependencies>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-source-plugin</artifactId>
                <version>${maven-source-plugin.version}</version>
                <executions>
                    <execution>
                        <id>attach-sources</id>
                        <goals>
                            <goal>jar-no-fork</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-javadoc-plugin</artifactId>
                <version>${maven-javadoc-plugin.version}</version>
                <executions>
                    <execution>
                        <id>attach-javadocs</id>
                        <goals>
                            <goal>jar</goal>
                        </goals>
                        <configuration>
                            <source>21</source>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>${maven-compiler-plugin.version}</version>
                <configuration>
                    <source>21</source>
                    <target>21</target>
                    <compilerArgs>
                        <arg>-parameters</arg>
                    </compilerArgs>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>${maven-surefire-plugin.version}</version>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-gpg-plugin</artifactId>
                <version>${maven-gpg-plugin.version}</version>
                <executions>
                    <execution>
                        <id>sign-artifacts</id>
                        <phase>verify</phase>
                        <goals>
                            <goal>sign</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.sonatype.central</groupId>
                <artifactId>central-publishing-maven-plugin</artifactId>
                <version>${central-publishing-maven-plugin.version}</version>
                <extensions>true</extensions>
                <configuration>
                    <publishingServerId>ossrh</publishingServerId>
                    <autoPublish>true</autoPublish>
                </configuration>
            </plugin>
        </plugins>
    </build>
</project>
